client/style.css
body{
margin: 0;
}

header{
  display: flex;
  flex-direction: column;
  font-size: 12px;
}


.hover:hover{
  cursor: pointer;
}

.list-inline  li, .list-inline {
  display: inline;
  margin-left: 10px;
}

.logo-and-drop{
  flex-direction: column;
}
.drop-down{
  font-size:1rem;
}

.icons{
  font-size: 1.5rem;
}

.single-item  img{
  width: 100%
}

.grad {
  background: linear-gradient(-45deg, #8be1de, #589faa, #6cbabf, #447c89);
  height: 1rem;
}

.item-icon{
  transition: transform .2s;
}

.item-icon:hover {
  transform: scale(1.055);
}

.departments{
  height: 32vh;
  background-color: #f1f1f1;
}

.department-icon{
  transition: transform .2s;
}

.item-icon:hover {
  transform: scale(1.055);
  background-color: white;

}

#button-expand{
  background-color: #fff;
  border: .1rem solid #979797;
  cursor: pointer;
  padding: 1rem 2rem;
  margin-top: 3rem;
  border-radius: .3rem;
  transition: 1s;

}

.hidden{
  display: none!important;
}


/* .expand{
  height: 60%;
  transition: 1s;
} */


/*
@media screen and (max-width: 1370px){
  .hero{
    height: 45%;
  }
  #dept{
    height: 30%;
  }
} */

